--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ margin-left:10px;
 font-size:35px;
 line-height:30px;
 float:left;
-color:#666666;
+color:#CCC;
 }
 .jl_div1b_dt4
 {font-family:Arial, Helvetica, sans-serif;
