--- a/css/layout.css
+++ b/css/layout.css
@@ -57,12 +57,13 @@ input, textarea, select {*font-size:100%:;font-family:inherit;}
 #footer {height:520px;font-size:14px;}
 .life-ensure {width:1160px;height:80px;background:url(../images/fo.png) no-repeat;margin:30px auto;padding:0;}
 .life-ensure a {width:290px;height:80px;float:left;display:block;text-indent:-1000em;}
-.life-desc {width:100%;background-color:#F9FAFC;background:url(../images/border.gif) 0 100% repeat-x;padding:25px 0;border-top:1px solid #ccc;}
+.life-desc {width:100%;background-color:#F9FAFC;padding:25px 0;border-top:1px solid #ccc;}
 .life-desc1 {height:173px;}
 .life-desc1 dl {width:217px;float:left;padding-left:15px;}
 .life-desc1 dl dt {height:41px;line-height:41px;color:#6E6F73;font-size:20px;font-weight:550;}
 .life-desc1 dl a {width:217px;heihgt:26px;line-height:26px;display:block;overflow:hidden;text-align:left;color:#999;}
 .life-desc1 a:hover,.life-desc1 a:active {color:#FF6600;}
+.footer-info{background:url(../images/border.gif) 0 0 repeat-x;}
 .life-intro {line-height:30px;padding:40px 0 41px 0;text-align:center;color:#999;}
 .life-intro a {color: #999;margin:0 5px;}
 .life-intro a:hover,.life-intro a:active {color:#FF6600;}
