--- a/css/2_tuij.css
+++ b/css/2_tuij.css
@@ -53,6 +53,17 @@ ul{ list-style:none;}
 .lb_tuijc1a{
 	width:280px;
 	height:224px;
+	opacity:1.0;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	background-image:url("../images/tuij3_03.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1a:hover{
+	width:280px;
+	height:224px;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
 	background-image:url("../images/tuij3_03.jpg");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
@@ -61,6 +72,18 @@ ul{ list-style:none;}
 	width:280px;
 	height:224px;
 	margin-left:10px;
+	opacity:1.0;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	background-image:url("../images/tuij3_05.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1b:hover{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
 	background-image:url("../images/tuij3_05.jpg");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
@@ -69,6 +92,18 @@ ul{ list-style:none;}
 	width:280px;
 	height:224px;
 	margin-left:10px;
+	opacity:1.0;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	background-image:url("../images/tuij3_07.jpg");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1c:hover{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
 	background-image:url("../images/tuij3_07.jpg");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
@@ -77,6 +112,18 @@ ul{ list-style:none;}
 	width:280px;
 	height:224px;
 	margin-left:10px;
+	opacity:1.0;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	background-image:url("../images/tuij3_09.gif");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}
+.lb_tuijc1d:hover{
+	width:280px;
+	height:224px;
+	margin-left:10px;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
 	background-image:url("../images/tuij3_09.gif");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
@@ -113,17 +160,42 @@ ul{ list-style:none;}
 	width:183px;
 	height:229px;
 	position:relative;
+	opacity:1.0;
+	filter:alpha(opacity=100); /* For IE8 and earlier */
+	border-top:1px solid #DCDCDC;
+	border-right:1px solid #DCDCDC;
+	border-bottom:1px solid #DCDCDC;
+	}
+.lb_tuijd3:hover{
+	width:183px;
+	height:229px;
+	position:relative;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
 	border-top:1px solid #DCDCDC;
 	border-right:1px solid #DCDCDC;
 	border-bottom:1px solid #DCDCDC;
 	}	
 .lb_tuijd4{
-	width:100%;
+	width:180px;
 	height:150px;
+	transition:width 0.5s;
+	-moz-transition:width 0.5s; /* Firefox 4 */
+	-webkit-transition:width 0.5s; /* Safari and Chrome */
+	-o-transition:width 0.5s; /* Opera */
 	}	
+.lb_tuijd4:hover{
+	width:172px;
+	}
 .lb_tuijd5{
 	font-size:1.4em;
 	color:#666666;
+	padding-left:10px;
+	word-wrap:break-word;
+	}
+.lb_tuijd5:hover{
+	font-size:1.4em;
+	color:#CC0000;
 	padding-left:10px;
 	word-wrap:break-word;
 	}	
@@ -176,20 +248,23 @@ ul{ list-style:none;}
 	position:relative;
 	border-top:1px solid #DCDCDC;
 	border-right:1px solid #DCDCDC;
+	border-bottom:1px solid #DCDCDC;
 	}	
 .lb_tuijf3{
-	width:100%;
+	width:172px;
 	height:130px;
+	margin:0 auto;
 	}	
 .lb_tuijf4{
 	width:100%;
 	height:30px;
-	background-color:#FF9800;
+	background-color:#656563;
 	font-size:1.4em;
 	color:#FFFFFF;
+	cursor:pointer;
 	text-align:center;
 	line-height:30px;
-	margin-top:2px;
+	margin-top:3px;
 	}	
 .lb_tuijf5{
 	width:50px;
@@ -222,23 +297,45 @@ ul{ list-style:none;}
 	top:8px;
 	left:8px;
 	}	
+.lb_tuijf8{
+	width:34px;
+	height:34px;
+	position:absolute;
+	top:10px;
+	right:10px;
+	}	
 .lb_tuijh{
 	width:100%;
 	height:120px;
+	margin-bottom:20px;
 	}	
 .lb_tuijh1{
 	width:276px;
 	height:100%;
+	float:left;
+	background-color:#FF695E;
+	}	
+.lb_tuijh1a{
+	width:276px;
+	height:100%;
+	float:left;
+	margin-left:18px;
 	background-color:#FF695E;
 	}	
 .lb_tuijh2{
-
+	width:206px;
+	float:left;
+	height:100%;
 	}	
-	/**********	padding:16px 0px 0px 20px;***********/
 .lb_tuijh3{
-	font-size:8em;
+	width:auto;
+	height:64px;
+	font-size:7em;
+	padding-left:20px;
 	font-style:italic;
+	font-weight:bold;
 	color:#FFFFFF;
+	float:left;
 	padding-right:10px;
 	}	
 .lb_tuijh4{
@@ -249,11 +346,33 @@ ul{ list-style:none;}
 	}	
 .lb_tuijh5{
 	font-size:1.4em;
-	color:red;
+	color:#FFFFFF;
+	padding-top:5px;
+	text-align:center;
 	}	
 .lb_tuijh6{
-
+	height:60px;
+	padding-top:20px;
 	}	
+.lb_tuijh7{
+	width:70px;
+	height:120px;
+	float:left;
+	background-image:url("../images/tuij10_03.gif");
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+	}	
+.lb_tuijh8{
+	word-wrap:break-word;
+	font-size:2.8em;
+	color:#FFFFFF;
+	text-align:center;
+	padding-top:20px;
+	}	
+	
+
+	
+	
 	
 	
 	
