--- a/css/Nav.css
+++ b/css/Nav.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 /*-------------------------------------------------Navigation---------------------------------------- */
-#site-nav {height:32px;line-height:32px;position:relative!important;background:#F7F7F7;z-index:100;-webkit-transform:translate3d(0,0,0);border-bottom:1px solid #e5e5e5;font-size:12px;}
+#site-nav {height:32px;line-height:32px;position:relative!important;background:#F7F7F7;z-index:100;border-bottom:1px solid #e5e5e5;font-size:12px;}
 .life-top {width:100%;height:3px;background:url(../images/Nav-01.gif) repeat-x;border-bottom:1px solid #FFF;}
 #life-nav {height:29px;line-height:29px;}
 .sn-container{width:100%;height:29px;position:relative;color:#999;}
