--- a/css/Nav.css
+++ b/css/Nav.css
@@ -2,19 +2,18 @@
 /* CSS Document */
 
 /*-------------------------------------------------Navigation---------------------------------------- */
-#site-nav {height:32px;line-height:32px;position:relative!important;background:#F7F7F7;z-index:100;border-bottom:1px solid #e5e5e5;font-size:12px;}
+#site-nav {height:32px;line-height:32px;background:#F7F7F7;border-bottom:1px solid #e5e5e5;font-size:12px;}
 .life-top {width:100%;height:3px;background:url(../images/Nav-01.gif) repeat-x;border-bottom:1px solid #FFF;}
 #life-nav {height:29px;line-height:29px;}
-.sn-container{width:100%;height:29px;position:relative;color:#999;}
+.sn-container{width:100%;height:29px;color:#999;}
 
 .enshrine {display: inline-block;float:left;}
 .enshrine .fore1 {padding:0 16px;z-index: 13;}
-#life-nav .ld {position: relative;}
 .enshrine b {top:8px;left:0;width:13px;height:13px;background: url(../images/header01.png) no-repeat 0 0;cursor: pointer;}
 .enshrine b {transition: transform .2s ease-in 0s;-webkit-transition: -webkit-transform .2s ease-in 0s;}
 .enshrine .fore1:hover b{transform:rotate(144deg);-moz-transform:rotate(144deg); /* Firefox 4 */-webkit-transform:rotate(144deg); /* Safari and Chrome */-o-transform:rotate(144deg); /* Opera */}
 
-#home-area{width:130px;height:28px;display: inline-block;position:relative;z-index:12;padding-top:2px;}
+#home-area{width:130px;height:28px;display: inline-block;position:relative;padding-top:2px;}
 #home-area dt{width:130px;height:24px;line-height:24px;;display: block;border:1px solid #F7F7F7;position:relative;z-index:14;}
 #home-area dt i{width:12px;height:18px;display:inline-block;position:relative;top:3px;margin:0 4px;background:url(../images/17.png) -5px -3px no-repeat;}
 #home-area dt b{
@@ -32,7 +31,7 @@ transition: all .2s ease;}
 #home-area dt:hover b{transform:rotate(180deg);-moz-transform:rotate(180deg); /* Firefox 4 */-webkit-transform:rotate(180deg); /* Safari and Chrome */-o-transform:rotate(180deg); /* Opera */}
 #home-area span,b,a{color:#666;}
 #home-area dt>a,#home-area dt>span {position: relative;top: -2px;}
-#home-area dd {width: 300px;position: relative;top:0px;z-index: 13;padding-bottom: 5px;}
+#home-area dd {width:300px;position:absolute;top:28px;z-index:105;padding-bottom: 5px; background-color:#FFF; display:none;}
 #home-area dd li {width: 80px;height: 24px;padding:0 0 0 17px;padding-top:4px;}
 
 #home-area .hover .blank{width:100%;left:0;}
@@ -42,9 +41,8 @@ transition: all .2s ease;}
 #home-area dd .lh{border-left:1px solid #F7F7F7;border-right:1px solid #F7F7F7;border-bottom:1px solid #F7F7F7;zoom:1;}
 #home-area dd .close {width: 19px;height: 19px;line-height: 100px;position: absolute;right: -5px;top: -5px;background: url(../images/17.png) -35px 0;overflow: hidden;cursor: pointer;}
 #life-nav .fr {height:28px;overflow:visible;float:right;}
-#site-nav .dd{display:none;}
-#life-nav li s {width: 0px;height: 12px;top: 9px;left: 0px;border-left: 1px solid #DDD;overflow: hidden;}
-#life-nav .ld s, #life-nav .ld b, #life-nav .ld .block {position: absolute;overflow: hidden;}
+#life-nav li s {/*top: 9px;left: 0px;*/border-left: 1px solid #DDD;overflow: hidden; padding-right:}
+/*#life-nav .ld s,*/ /*#life-nav .ld b,*/ #life-nav .ld .block {position: absolute;overflow: hidden;}
 
 #life-nav .lh {overflow:hidden;zoom:1;}
 #life-nav .lh li{float: left;}
@@ -52,12 +50,11 @@ transition: all .2s ease;}
 
 .greet{padding:0 15px 0 12px;}
 .fore{padding:0 15px;}
-.myaccount{padding:0 15px 0 34px;}
+.myaccount{padding:0 5px 0 5px;}
 .myaccount i {
-position: absolute;
-z-index: 2;
-left: 15px;
-top: 9px;
+
+
+
 width: 10px;
 height: 11px;
 background-image: url(../images/logo.jpg);
@@ -68,10 +65,10 @@ transition: all .2s ease;
 }
 .myaccount:hover b{transform:rotate(180deg);-moz-transform:rotate(180deg); /* Firefox 4 */-webkit-transform:rotate(180deg); /* Safari and Chrome */-o-transform:rotate(180deg); /* Opera */}
 .myaccount b {
-position: absolute;
+/*position: absolute;
 z-index: 2;
 right: 5px;
-top: 13px;
+top: 13px;*/
 width: 6px;
 height: 4px;
 background-image: url(../images/logo.jpg);
@@ -125,8 +122,8 @@ transition: all .2s ease;}
 #site-nav a:hover, #site-nav a:active, #site-nav .menu-bd {color: #FF6600;text-decoration:underline;}
 #site-nav .menu-bd a:link, #site-nav .menu-bd a:visited {color: #666;}
 #site-nav .menu-bd-panel a {display: block;line-height: 20px;}
-
-#mylifePanel ul{float:left;width:90px;height:120px;}
+.menu-bd-panel{display:block; position:absolute; z-index:105; background-color:#FFF;}
+#mylifePanel ul{float:left;width:80px;min-height:10px;}
 #site-nav .sn-qrcode {width: 168px;height: 198px;position: absolute;left: -48px;top: 26px;background: #fff;box-shadow: 0 0 5px #aaa;}
 #site-nav .sn-qrcode-content {width: 135px;height: 135px;margin: 16px auto;background: url(../images/258.png) 0 0 no-repeat;}
 #site-nav .sn-qrcode p {background-position: -141px -73px;text-indent: -9999px;overflow: hidden;margin: 0 10px;}
@@ -193,3 +190,12 @@ padding: 0 12px 5px;
 border: 1px solid #ccc;
 background: #FFF;
 }
+
+
+
+
+
+/*增加样式*/
+.jl1{font-size:10px; padding-right:5px;}
+.jl2{float:left;display:inline-block; width:10px; height:10px; padding-right:5px;}
+.jl2 img{width:100%; height:100%;}
