--- a/css/2_tuangou.css
+++ b/css/2_tuangou.css
@@ -165,7 +165,14 @@ height:276px;
 border:1px solid #F0F0F0;
 float:right;
 }
-
+.tuang_dao1y1{
+width:auto;
+height:30px;
+line-height:30px;
+padding-left:10px;
+font-size:1.2em;
+color:#333333;
+}
 
 
 
