--- a/css/Nav.css
+++ b/css/Nav.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 /*-------------------------------------------------Navigation---------------------------------------- */
-#site-nav {height:32px;line-height:32px;background:#F7F7F7;border-bottom:1px solid #e5e5e5;font-size:12px;}
+#site-nav {height:32px; width:100%;background:#F7F7F7;border-bottom:1px solid #e5e5e5;font-size:12px;}
 .life-top {width:100%;height:3px;background:url(../images/Nav-01.gif) repeat-x;border-bottom:1px solid #FFF;}
 #life-nav {height:29px;line-height:29px;}
 .sn-container{width:100%;height:29px;color:#999;}
@@ -13,7 +13,7 @@
 .enshrine b {transition: transform .2s ease-in 0s;-webkit-transition: -webkit-transform .2s ease-in 0s;}
 .enshrine .fore1:hover b{transform:rotate(144deg);-moz-transform:rotate(144deg); /* Firefox 4 */-webkit-transform:rotate(144deg); /* Safari and Chrome */-o-transform:rotate(144deg); /* Opera */}
 
-#home-area{width:130px;height:28px;display: inline-block;position:relative;padding-top:2px;}
+#home-area{width:130px;height:28px;display: inline-block;position:relative;padding-top:2px; float:left;}
 #home-area dt{width:130px;height:24px;line-height:24px;;display: block;border:1px solid #F7F7F7;position:relative;z-index:14;}
 #home-area dt i{width:12px;height:18px;display:inline-block;position:relative;top:3px;margin:0 4px;background:url(../images/17.png) -5px -3px no-repeat;}
 #home-area dt b{
@@ -40,29 +40,17 @@ transition: all .2s ease;}
 #home-area dd li a {color: #005ea7;height: 18px;line-height: 18px;padding: 1px 3px;float: left;}
 #home-area dd .lh{border-left:1px solid #F7F7F7;border-right:1px solid #F7F7F7;border-bottom:1px solid #F7F7F7;zoom:1;}
 #home-area dd .close {width: 19px;height: 19px;line-height: 100px;position: absolute;right: -5px;top: -5px;background: url(../images/17.png) -35px 0;overflow: hidden;cursor: pointer;}
-#life-nav .fr {height:28px;overflow:visible;float:right;}
-#life-nav li s {/*top: 9px;left: 0px;*/border-left: 1px solid #DDD;overflow: hidden; padding-right:}
-/*#life-nav .ld s,*/ /*#life-nav .ld b,*/ #life-nav .ld .block {position: absolute;overflow: hidden;}
+#life-nav .fr {height:29px;float:right;}
+#life-nav li s {/*top: 9px;left: 0px;*/border-left: 1px solid #DDD;}
 
-#life-nav .lh {overflow:hidden;zoom:1;}
+#life-nav .lh {zoom:1;}
 #life-nav .lh li{float: left;}
 #life-nav span a{padding-left:5px;}
 
 .greet{padding:0 15px 0 12px;}
 .fore{padding:0 15px;}
-.myaccount{padding:0 5px 0 5px;}
-.myaccount i {
+.myaccount{ width:90px; padding-left:5px;}
 
-
-
-width: 10px;
-height: 11px;
-background-image: url(../images/logo.jpg);
-background-repeat: no-repeat;
-background-position: -42px 0px;
--webkit-transition: all .2s ease;
-transition: all .2s ease;
-}
 .myaccount:hover b{transform:rotate(180deg);-moz-transform:rotate(180deg); /* Firefox 4 */-webkit-transform:rotate(180deg); /* Safari and Chrome */-o-transform:rotate(180deg); /* Opera */}
 .myaccount b {
 /*position: absolute;
@@ -77,7 +65,7 @@ background-position: -3px -23px;
 -webkit-transition: all .2s ease;
 transition: all .2s ease;
 }
-.sn-cart {padding:0 15px 0 34px;}
+.sn-cart {padding:0 5px 0 5px;}
 .sn-cart i {position: absolute;
 z-index: 2;
 left: 12px;
@@ -89,22 +77,9 @@ background-repeat: no-repeat;
 background-position: -62px 0px;
 -webkit-transition: all .2s ease;
 transition: all .2s ease;}
-.sn-join{padding:0 15px;}
-#app-life{padding:0 15px 0 34px;}
-#app-life i {
-position: absolute;
-z-index: 2;
-left: 14px;
-top: 5px;
-width: 12px;
-height: 18px;
-background-image: url(../images/logo.jpg);
-background-repeat: no-repeat;
-background-position: -87px 1px;
--webkit-transition: all .2s ease;
-transition: all .2s ease;
-}
-.sn-sitemap{display:block;padding:0 15px;}
+.sn-join{padding:0 5px 0 2px;}
+#app-life{padding:0 5px 0 0px;}
+.sn-sitemap{display:block;padding:0 0px; position:relative;}
 .sn-sitemap:hover b{transform:rotate(180deg);-moz-transform:rotate(180deg); /* Firefox 4 */-webkit-transform:rotate(180deg); /* Safari and Chrome */-o-transform:rotate(180deg); /* Opera */}
 .sn-sitemap b{position: absolute;
 z-index: 2;
@@ -121,17 +96,13 @@ transition: all .2s ease;}
 /*--------------------------------nav a--------------------------------*/
 #site-nav a:hover, #site-nav a:active, #site-nav .menu-bd {color: #FF6600;text-decoration:underline;}
 #site-nav .menu-bd a:link, #site-nav .menu-bd a:visited {color: #666;}
-#site-nav .menu-bd-panel a {display: block;line-height: 20px;}
-.menu-bd-panel{display:block; position:absolute; z-index:105; background-color:#FFF;}
-#mylifePanel ul{float:left;width:80px;min-height:10px;}
+.menu-bd-panel{display:none; position:absolute; z-index:250; background-color:#FFF; top:28px; width:85px; padding-left:5px;line-height:20px; left:-5px;}
+.menu-bd-panel li{ padding-left:15px; }
 #site-nav .sn-qrcode {width: 168px;height: 198px;position: absolute;left: -48px;top: 26px;background: #fff;box-shadow: 0 0 5px #aaa;}
 #site-nav .sn-qrcode-content {width: 135px;height: 135px;margin: 16px auto;background: url(../images/258.png) 0 0 no-repeat;}
 #site-nav .sn-qrcode p {background-position: -141px -73px;text-indent: -9999px;overflow: hidden;margin: 0 10px;}
 #site-nav .sn-qrcode b {width: 0;height: 0;line-height: 0;font-size: 0;position: absolute;left: 50%;top: -10px;margin-left: -2px;border-width: 5px;border-style: dashed dashed solid;border-color: transparent transparent #fff;}
 #site-nav .mui-global-iconfont {color: #c40000;}
-
-
-
 .mui-mbar-tabs-mask {
 position: absolute;
 top: 0;
@@ -179,13 +150,14 @@ background-color: #000;
 cursor: pointer;
 z-index: 9;
 }
-.hd_site_nav {
+.hd_site_nav 
+{
 display: none;
-position: absolute;
-top: 5px;
-right: 0;
-z-index:auto;
-width: 210px;
+position:absolute;
+top:29px;
+left:-20px;
+z-index:250;
+width: 150px;
 padding: 0 12px 5px;
 border: 1px solid #ccc;
 background: #FFF;
@@ -196,6 +168,10 @@ background: #FFF;
 
 
 /*增加样式*/
-.jl1{font-size:10px; padding-right:5px;}
-.jl2{float:left;display:inline-block; width:10px; height:10px; padding-right:5px;}
-.jl2 img{width:100%; height:100%;}
+.jl1{font-size:10px; padding-right:5px; }
+.jl2{float:left;display:inline-block; width:10px; height:10px;}
+.jl3a{float:left;display:inline-block; width:10px; height:10px; margin-top:3px;}
+.jl2a{float:left;display:inline-block; height:29px; line-height:29px;}
+.jl2aa{float:left;display:inline-block; width:65px; height:29px; line-height:29px; margin-top:-2px;}
+
+.jl3{width:90px; height:29px; position:relative;}
