--- a/css/2_tuangou.css
+++ b/css/2_tuangou.css
@@ -146,6 +146,9 @@ color:#666666;
 line-height:46px;
 padding-right:16px;
 }
+.tuang_dao1x4 a:hover{
+color:#63AAE3;
+}
 /*********导航下滑动部分***********/
 .tuang_dao1x5{
 width:710px;
@@ -255,7 +258,7 @@ border:1px solid #F0F0F0;
 margin-top:20px;
 }
 .tuang3{
-width:1138px;
+width:1136px;
 height:234px;
 margin:10px 20px;
 overflow:hidden;
@@ -266,6 +269,7 @@ position:relative;
 .tuang4{
 width:100%;
 height:28px;
+
 }
 .tuang5{
 width:80px;
@@ -290,23 +294,53 @@ font-size:1.4em;
 color:#666666;
 line-height:28px;
 }
+/**
+.tuang_jiaodian{
+width:62px;
+height:28px;
+float:right;
+margin-right:18px;
+}
+*/
 
-
-
-
-
+#jdAdBtn{
+float:right;
+width:80px;
+height:28px;
+}
+.tuang_jiaodian_a{
+width:8px;
+height:8px;
+background-color:#DDDDDD;
+line-height:28px;
+float:left;
+margin-right:20px;
+border-radius:60px;
+-moz-border-radius:60px; /* 老的 Firefox */
+-webkit-border-radius: 60px; 
+margin:18px 4px 0px 0px;
+}
+.tuang_jiaodian_a:hover{
+background-color:#FF9000;
+}
 .dian_tg{
+top:18px;
+right:60px;
+position:absolute;
+}
+
+.dian_tg a{
 width:6px;
 height:6px;
-position:absolute;
-top:18px;
-right:18px;
 float:left;
+margin-right:6px;
+line-height:33px;
 background-color:#DCDCDC;
 border-radius:30px;
 -moz-border-radius:30px; /* 老的 Firefox */
+-webkit-border-radius: 30px; 
 }
-.dian_tg:hover{
+.dian_tg a:hover{
 background-color:#FF9000;
 }
 
@@ -321,9 +355,9 @@ height:170px;
 float:left;
 }
 .tuang7{
-width:1118px;
+width:1120px;
 height:170px;
-margin:10px 0px 0px 6px;
+margin-top:10px;
 float:left;
 }
 .tuang8{
@@ -335,7 +369,7 @@ float:left;
 width:192px;
 height:200px;
 float:left;
-margin:0px 15.8px 0px 15.8px;
+margin:0px 16px 0px 16px;
 }
 .tuang9{
 width:192px;
@@ -504,6 +538,7 @@ line-height:30px;
 float:right;
 border-radius:4px;
 -moz-border-radius:4px; /* 老的 Firefox */
+-webkit-border-radius: 4px; 
 }
 .tuang27{
 height:20px;
@@ -590,9 +625,9 @@ line-height:25px;
 float:left;
 }
 .tuang39{
-width:100%;
+width:1160px;
 height:200px;
-margin:0px 18px 24px 18px;
+float:left;
 }
 .tuang40{
 width:210px;
@@ -603,8 +638,71 @@ float:left;
 width:210px;
 height:200px;
 float:left;
-margin-left:18px;
+margin:0px 11px;
 }
+.tuang41{
+width:1160px;
+height:200px;
+overflow:hidden;
+}
+.tuang42{
+width:6000px;
+height:200px;
+float:left;
+}
+
+
+
+
+#jdAdBtnl{
+float:right;
+width:80px;
+height:28px;
+}
+.btn_a{
+width:8px;
+height:8px;
+background-color:#DDDDDD;
+line-height:28px;
+float:left;
+margin-right:20px;
+border-radius:60px;
+-moz-border-radius:60px; /* 老的 Firefox */
+-webkit-border-radius: 60px; 
+margin:18px 4px 0px 0px;
+}
+.btn_a:hover{
+background-color:#FF9000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**********/
 
 
