--- a/css/Nav.css
+++ b/css/Nav.css
@@ -96,7 +96,7 @@ transition: all .2s ease;}
 /*--------------------------------nav a--------------------------------*/
 #site-nav a:hover, #site-nav a:active, #site-nav .menu-bd {color: #FF6600;text-decoration:underline;}
 #site-nav .menu-bd a:link, #site-nav .menu-bd a:visited {color: #666;}
-.menu-bd-panel{display:none; position:absolute; z-index:250; background-color:#FFF; top:28px; width:85px; padding-left:5px;line-height:20px; left:-5px;}
+.menu-bd-panel{display:none; position:absolute; z-index:250; background-color:#FFF; top:2px; width:85px; padding-left:5px;line-height:20px; left:-5px;}
 .menu-bd-panel li{ padding-left:15px; }
 #site-nav .sn-qrcode {width: 168px;height: 198px;position: absolute;left: -48px;top: 26px;background: #fff;box-shadow: 0 0 5px #aaa;}
 #site-nav .sn-qrcode-content {width: 135px;height: 135px;margin: 16px auto;background: url(../images/258.png) 0 0 no-repeat;}
@@ -155,7 +155,7 @@ z-index: 9;
 display: none;
 position:absolute;
 top:29px;
-left:-20px;
+right:0;
 z-index:250;
 width: 150px;
 padding: 0 12px 5px;
@@ -175,3 +175,4 @@ background: #FFF;
 .jl2aa{float:left;display:inline-block; width:65px; height:29px; line-height:29px; margin-top:-2px;}
 
 .jl3{width:90px; height:29px; position:relative;}
+.hd_site_nav dd div{padding:0 5px; float:left;}
