--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -176,3 +176,79 @@ background: #FFF;
 
 .jl3{width:90px; height:29px; position:relative;}
 .hd_site_nav dd div{padding:0 2px; display:inline-block;}
+body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0;}
+body {font: 12px/1.5 "Microsoft Yahei",tahoma,arial,"Hiragino Sans GB";}
+img {border:none;}
+a{text-decoration:none;}
+a:hover{text-decoration:underline;}
+
+ul,li{list-style:none;}
+li {display: list-item;text-align: -webkit-match-parent;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------------------------------Generalise------------------------------------- */
+
+#header, #Content, #footer {width:100%;height:160px;background-color:#fff;}
+#life-nav, .headerLayout, /*.content,*/ .life-desc1, .life-intro {width:1160px;margin:0 auto;}
+
+/* ----------------------------------------------Header------------------------------------- */
+.headerLayout {padding-top:10px;}
+#header .headerCon {width: 1160px;position: relative;}
+
+#lifeLogo {width:390px;height:109px;line-height:64px;padding-top:18px;voerflow:hidden;float:left;cursor:auto;}
+#lifeLogo a {width:auto;height:109px;display:block;}
+
+#header .header-extra {overflow: visible;}
+.header-banner {width:200px;height:109px;float:right;padding-top:18px;cursor: auto;}
+.header-banner a{width:auto;height:109px;display:block;}
+
+#lifeSearch {float:left;width:490px !important;padding:40px 20px 0 0;-webkit-transform: translate3d(0, 0, 0);overflow: hidden;}
+.lifeSearch-form {border: solid #FF6600;border-width: 3px 0 3px 3px;overflow: hidden;}
+#lifeSearch fieldset {position: relative;}
+#lifeSearch legend {display: none;}
+legend {color: #000;}
+.lifeSearch-form fieldset,.lifeSearch-form img {border: 0;}
+#header #lifeSearch label, #header .s-combobox .s-combobox-input-wrap, #header #lifeSearch .s-combobox, #header .lifeSearch-input {height: 44px;line-height: 44px;font-size: 14px;}
+.lifeSearch-input {background: #fff;position: relative;}
+#lifeSearch label {max-width:90%;overflow:hidden;white-space:nowrap;position:absolute;left:8px;top:0px;z-index:1;visibility:hidden;color:#666;}
+.s-combobox {float:left;}
+.s-combobox .s-combobox-input-wrap {position: relative;vertical-align: middle;}
+#header #lifeSearch #mq {background: 0 0;height: 22px;line-height: 22px;}
+#lifeSearch #mq {color:#000;padding: 13px 0 13px 5px;outline:0;border:0;font-weight:900;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;}
+#mq {width: 430px !important;position: static;}
+.s-combobox-input {border-radius:2px 0 0 2px;font-size:100%;vertical-align:middle;overflow-y:visible;}
+input, textarea, select {*font-size:100%;font-family:inherit;}
+
+#lifeSearch button {width: 52px;height: 45px;line-height: 45px;cursor: pointer;color:#FF6600;background-color: #FF6600;}
+.hot-query {width:100%;height:18px;overflow:hidden;margin-left:10px;padding-top:6px;}
+.hot-query li {display: inline-block;line-height: 1.1;color:#666;padding:0 2px;}
+.hot-query li a{color:#666;}
+.hot-query li a:hover,.life-intro a:active {color:#FF6600;text-decoration:underline;}
+
+/*------------------------------------------------Footer--------------------------------------------*/
+#footer {height:550px;font-size:14px;}
+.life-ensure {width:1160px;height:139px;background:url(../images/fo.png) 0 50% no-repeat;margin:0 auto;padding:0;border-top:1px solid #ccc;}
+.life-ensure a {width:290px;height:80px;float:left;display:block;text-indent:-1000em;padding:30px 0;}
+.life-desc {width:100%;background-color:#F9FAFC;padding:21px 0;border-top:1px solid #ccc;}
+.life-desc1 {height:173px;}
+.life-desc1 dl {width:217px;float:left;padding-left:15px;}
+.life-desc1 dl dt {height:41px;line-height:41px;color:#6E6F73;font-size:20px;font-weight:550;}
+.life-desc1 dl a {width:217px;heihgt:26px;line-height:26px;display:block;overflow:hidden;text-align:left;color:#999;}
+.life-desc1 a:hover,.life-desc1 a:active {color:#FF6600;}
+.life-mobile dd{padding-top:15px;}
+.footer-info{background:url(../images/border.gif) 0 0 repeat-x;}
+.life-intro {line-height:30px;padding:48px 0 41px 0;text-align:center;color:#999;}
+.life-intro a {color: #999;margin:0 5px;}
+.life-intro a:hover,.life-intro a:active {color:#FF6600;}
+.life-footer {width:100%;height:15px; background:url(../images/Fot_02.gif) repeat-x;}
